# renfield

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  demo.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: POC.md  linkedin.md
examples/: sample_claude_config.json  sample_tools.json  vuln_lab_config.json  vuln_lab_credential.json  vuln_lab_destructive.json  vuln_server.py
src/renfield/: __init__.py  agent.py  classify.py  cli.py  config.py  discover.py  egress.py  graph.py  live.py  llm.py  mcp_client.py  mcp_server.py  models.py  oracle.py  outputs.py  payloads.py  provenance.py  providers.py  proxy.py  report.py  sandbox.py  shadows.py  taint.py  verify.py
src/renfield/lab/: __init__.py  vuln_server.py
src/sycophant/: __init__.py  agent.py  cli.py  graph.py  llm.py  mcp_client.py  models.py  report.py  sandbox.py
src/toxitrace/: __init__.py  agent.py  classify.py  cli.py  config.py  live.py  mcp_client.py  models.py  oracle.py  report.py  sandbox.py
tests/: test_attacks.py  test_audit.py  test_classify.py  test_config.py  test_credential.py  test_destructive.py  test_discover.py  test_graph.py  test_live.py  test_llm_agent.py  test_mcp_server.py  test_outputs.py  test_packaging.py  test_provenance.py  test_proxy.py  test_redteam.py  test_remediate.py  test_reports.py  test_shadows.py  test_taint.py  test_taint_remediation.py  test_verify.py
tools/: make_demo.py  make_explainer.py
