[project]
name = "renfield-mcp"
version = "1.5.0"
description = "Renfield — penetration testing for AI agents: finds and PROVES cross-server confused-deputy exfiltration chains in an MCP tool mesh, measures whether a real LLM falls for them, and runs as an MCP server any agent can call."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SYCO" }]
keywords = ["mcp", "ai-agent", "penetration-testing", "red-team", "confused-deputy", "prompt-injection", "llm-security", "indirect-prompt-injection", "ollama"]
classifiers = [
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]   # OpenAI / Codex / any OpenAI-compatible driver
dev = ["pytest>=7"]

[project.scripts]
ren = "renfield.cli:main"
renfield = "renfield.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
