[project]
name = "renfield-mcp"
version = "1.7.2"
description = "Renfield — penetration testing for AI agents: finds and PROVES cross-server confused-deputy exfiltration chains in an MCP tool mesh, measures whether a real LLM falls for them, gates them at runtime, and runs as an MCP server any agent can call."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SYCO" }]
keywords = ["mcp", "ai-agent", "penetration-testing", "red-team", "confused-deputy", "prompt-injection", "llm-security", "indirect-prompt-injection", "ollama", "taint-analysis", "agent-security"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/SYCO7/renfield"
Repository = "https://github.com/SYCO7/renfield"
Issues = "https://github.com/SYCO7/renfield/issues"
Changelog = "https://github.com/SYCO7/renfield/blob/main/CHANGELOG.md"

[project.optional-dependencies]
openai = ["openai>=1.0"]   # OpenAI / Codex / any OpenAI-compatible driver
dev = ["pytest>=7"]

[project.scripts]
ren = "renfield.cli:main"
renfield = "renfield.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
